# roboplc

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
examples/: eapi.rs  hmi.rs  modbus-master.rs  modbus-slave.rs  pipe.rs  plc-modbus.rs  raw-udp.rs  rflow.rs  shutdown-custom.rs  shutdown.rs  snmp-modbus.rs
roboplc-cli/: Cargo.toml  README.md  justfile
roboplc-cli/src/: arguments.rs  common.rs  config.rs  exec.rs  flashing.rs  main.rs  metrics.rs  project.rs  remote.rs  ureq_err.rs
roboplc-cli/tpl/: default.rs
roboplc-derive/: Cargo.toml  README.md
roboplc-derive/src/: lib.rs
schemas/: controller.drawio  databuffer.drawio  hub.drawio
src/: buf.rs  controller.rs  hmi.rs  hub.rs  hub_async.rs  lib.rs  pchannel.rs  pchannel_async.rs  pdeque.rs  semaphore.rs  state.rs  supervisor.rs  system.rs  thread_rt.rs  time.rs  ttlcell.rs
src/comm/: mod.rs  serial.rs  tcp.rs
src/io/: eapi.rs  keyboard.rs  mod.rs  pipe.rs  raw_udp.rs
src/io/modbus/: mod.rs  regs.rs  server.rs
src/snapshots/: roboplc__hub__test__hub-2.snap  roboplc__hub__test__hub.snap  roboplc__hub_async__test__hub-2.snap  roboplc__hub_async__test__hub.snap  roboplc__pchannel__test__delivery_policy_optional-2.snap  roboplc__pchannel__test__delivery_policy_optional.snap  roboplc__pchannel__test__delivery_policy_single-2.snap  roboplc__pchannel__test__delivery_policy_single-3.snap  roboplc__pchannel__test__delivery_policy_single.snap  roboplc__pchannel_async__test__delivery_policy_optional-2.snap  roboplc__pchannel_async__test__delivery_policy_optional.snap  roboplc__pchannel_async__test__delivery_policy_single-2.snap  roboplc__pchannel_async__test__delivery_policy_single-3.snap  roboplc__pchannel_async__test__delivery_policy_single.snap  roboplc__ttlcell__test__get_set-2.snap  roboplc__ttlcell__test__get_set-3.snap  roboplc__ttlcell__test__get_set.snap
