[package]
name = "roboplc"
version = "0.1.12"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Kit for PLCs and real-time micro-services"
repository = "https://github.com/eva-ics/roboplc"
keywords = ["realtime", "robots", "plc", "industrial"]
readme = "README.md"
autoexamples = false

[package.metadata.docs.rs]
features = []

[package.metadata.playground]
features = []

[dependencies]
binrw = "0.13.3"
bma-ts = { version = "0.1.8", features = ["serde"] }
colored = "2.1.0"
libc = "0.2.153"
nix = { version = "0.28.0", features = ["signal"] }
object-id = "0.1.3"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
pin-project = "1.1.5"
rmodbus = { version = "0.9.3" }
roboplc-derive = { version = "0.1.2" }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serial = "0.4.0"
sysinfo = "0.30.6"
thiserror = "1.0.57"
tracing = "0.1.40"

[dev-dependencies]
env_logger = "0.11.3"
insta = "1.36.1"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
tracing = { version = "0.1.40", features = ["log"] }

[[example]]
name = "plc-modbus"
path = "examples/plc-modbus.rs"

[[example]]
name = "raw-udp"
path = "examples/raw-udp.rs"
