[package]
name = "roboplc"
version = "0.1.31"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Framework for PLCs and real-time micro-services"
repository = "https://github.com/eva-ics/roboplc"
keywords = ["realtime", "robots", "plc", "industrial"]
readme = "README.md"
autoexamples = false

[package.metadata.docs.rs]
features = ["full", "eva-common/openssl-no-fips"]

[package.metadata.playground]
features = ["full", "eva-common/openssl-no-fips"]

[dependencies]
binrw = "0.13.3"
bma-ts = { version = "0.1.8", features = ["serde"] }
colored = "2.1.0"
libc = "0.2.153"
nix = { version = "0.28.0", features = ["signal"] }
object-id = "0.1.3"
oneshot = { version = "0.1.6", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
pin-project = "1.1.5"
rmodbus = { version = "0.9.4", optional = true }
roboplc-derive = { version = "0.1.9" }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serial = "0.4.0"
sysinfo = "0.30.6"
thiserror = "1.0.57"
tracing = "0.1.40"
signal-hook = "0.3.17"
eva-common = { version = "0.3.49", features = ["events", "payload", "common-payloads", "acl"], optional = true }
eva-sdk = { version = "0.3.45", features = ["controller"], optional = true }
busrt = { version = "0.4.9", features = ["rpc", "ipc"], optional = true }
tokio = { version = "1.36.0", optional = true }
hostname = { version = "0.3.1", optional = true }
env_logger = "0.11.3"
log = "0.4.21"

[features]
eapi = ["eva-common", "eva-sdk", "busrt", "tokio", "hostname"]
modbus = ["rmodbus"]
openssl-vendored = ["busrt/openssl-vendored", "eva-common/openssl-vendored"]
full = ["eapi", "modbus"]

[dev-dependencies]
insta = "1.36.1"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
tracing = { version = "0.1.40", features = ["log"] }

[[example]]
name = "modbus-master"
path = "examples/modbus-master.rs"
required-features = ["modbus"]

[[example]]
name = "modbus-slave"
path = "examples/modbus-slave.rs"
required-features = ["modbus"]

[[example]]
name = "raw-udp"
path = "examples/raw-udp.rs"

[[example]]
name = "shutdown"
path = "examples/shutdown.rs"

[[example]]
name = "shutdown-custom"
path = "examples/shutdown-custom.rs"

[[example]]
name = "eapi"
path = "examples/eapi.rs"
required-features = ["eapi"]
