[package]
name = "roboplc-cli"
version = "0.1.7"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "RoboPLC command-line interface"
repository = "https://github.com/eva-ics/roboplc"
keywords = ["realtime", "robots", "plc", "industrial"]
readme = "README.md"

[[bin]]
name = "robo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = "2.1.0"
prettytable-rs = "0.10.0"
roboplc = "0.1.27"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
ureq = { version = "2.9.6", features = ["json", "native-certs", "native-tls"] }
ureq_multipart = "1.1.1"
which = "6.0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
