[package]
name = "roboplc-cli"
version = "0.1.22"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "RoboPLC command-line interface"
repository = "https://github.com/roboplc/roboplc"
keywords = ["realtime", "robots", "plc", "industrial"]
readme = "README.md"

[[bin]]
name = "robo"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.1", features = ["derive", "env"] }
colored = "1"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shlex = "1.3.0"
toml = "0.5"
ureq = { version = "2.9.6", features = ["json", "native-certs", "native-tls"] }
ureq_multipart = "1.1.1"
which = "3"
[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"

[profile.release]
strip = true
