[package]
name = "roboplc-cli"
version = "0.6.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "RoboPLC command-line interface"
repository = "https://github.com/roboplc/roboplc"
keywords = ["realtime", "robots", "plc", "industrial"]
readme = "README.md"

[[bin]]
name = "robo"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.1", features = ["derive", "env"] }
colored = "1"
dirs = "5.0.1"
futures-util = { version = "0.3.30", features = ["sink"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shlex = "1.3.0"
toml = "0.5"
ureq = { version = "2.9.6", features = ["json", "native-certs", "native-tls"] }
ureq_multipart = "1.1.1"
which = "3"
term_size = "0.3.2"
tokio = { version = "=1.36", features = ["rt", "fs", "signal", "sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls"] }
once_cell = "1.19.0"
bma-ts = { version = "0.1.14", features = ["serde", "chrono"] }
prettytable-rs = "0.10.0"
chrono = "0.4.39"

[target.'cfg(windows)'.dependencies]
ansi_term = "0.12.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
termios = "0.3.3"

[profile.release]
strip = true
